// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengesListScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengesListScreen
    challenges={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <SafeAreaView
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <ChallengeSetBackground />
        </SafeAreaView>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 30,
              "position": "absolute",
              "right": 0,
              "top": 40,
            }
          }
        >
          <ChallengeSet
            challenges={Array []}
          />
        </Component>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ChallengeSetBackground />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ChallengeSet
            challenges={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "paddingHorizontal": 30,
            "position": "absolute",
            "right": 0,
            "top": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "challenges": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <SafeAreaView
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <ChallengeSetBackground />
          </SafeAreaView>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "left": 0,
                "paddingHorizontal": 30,
                "position": "absolute",
                "right": 0,
                "top": 40,
              }
            }
          >
            <ChallengeSet
              challenges={Array []}
            />
          </Component>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ChallengeSetBackground />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ChallengeSet
              challenges={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 30,
              "position": "absolute",
              "right": 0,
              "top": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "challenges": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengesListScreen should render as Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengesListScreen
    challenges={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <SafeAreaView
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            resizeMethod="scale"
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
              }
            }
            style={
              Object {
                "borderColor": "transparent",
                "borderWidth": 1,
                "height": "100%",
              }
            }
          />
        </SafeAreaView>,
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 30,
              "position": "absolute",
              "right": 0,
              "top": 40,
            }
          }
        >
          <ChallengeSet
            challenges={Array []}
          />
        </Component>,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Image
            resizeMethod="scale"
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
              }
            }
            style={
              Object {
                "borderColor": "transparent",
                "borderWidth": 1,
                "height": "100%",
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "scale",
            "resizeMode": "contain",
            "source": Object {
              "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
            },
            "style": Object {
              "borderColor": "transparent",
              "borderWidth": 1,
              "height": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ChallengeSet
            challenges={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "paddingHorizontal": 30,
            "position": "absolute",
            "right": 0,
            "top": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "challenges": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <SafeAreaView
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Image
              resizeMethod="scale"
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
                }
              }
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": "100%",
                }
              }
            />
          </SafeAreaView>,
          <Component
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "left": 0,
                "paddingHorizontal": 30,
                "position": "absolute",
                "right": 0,
                "top": 40,
              }
            }
          >
            <ChallengeSet
              challenges={Array []}
            />
          </Component>,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Image
              resizeMethod="scale"
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
                }
              }
              style={
                Object {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "height": "100%",
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMethod": "scale",
              "resizeMode": "contain",
              "source": Object {
                "testUri": "../../../src/components/screens/member/challenges/challenges-list/challenges-list-background/challenges-list-background.png",
              },
              "style": Object {
                "borderColor": "transparent",
                "borderWidth": 1,
                "height": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ChallengeSet
              challenges={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 30,
              "position": "absolute",
              "right": 0,
              "top": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "challenges": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
